# Bachelor-Thesis

./: README.md
implementation/: ChangeLog  Makefile.in  README  configure  configure.ac
implementation/ECF/: Makefile.in  Operator.h  main.cpp
implementation/ECF/floatingpoint/: FloatingPoint.cpp
implementation/examples/CEC/: funcmin
implementation/examples/COCO/: ecf_experiment  funcmin  log01.txt
implementation/examples/COCO/VS/.svn/: entries
implementation/examples/COCO/bbob/: exampleexperiment  exampletiming
implementation/examples/COCO/bbob/.svn/: entries
implementation/examples/GAMSA/: CMakeLists.txt  DNA_MYH16.txt  FASTA.txt  FastaParser.cpp  FastaParser.h  Makefile  MsaEvalOp.cpp  MsaEvalOp.h  MsaGenotype.h  MsaGenotypeCrsOnePoint.cpp  MsaGenotypeCrsOnePoint.h  MsaGenotypeMut.cpp  MsaGenotypeMut.h  MsaGenotypeMutDeleteGap.cpp  MsaGenotypeMutDeleteGap.h  MsaGenotypeMutInsertGap.cpp  MsaGenotypeMutInsertGap.h  main.cpp  parameters.txt
implementation/examples/GATSP/: log_1.txt  log_10.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  log_9.txt  stats.txt  tsp
implementation/examples/GATSP/VS/.svn/: entries
implementation/examples/GAonemax/: OneMaxEvalOp.cpp  log_01.txt  log_02.txt  log_03.txt  log_04.txt  log_05.txt  log_06.txt  log_07.txt  log_08.txt  log_09.txt  log_10.txt  log_11.txt  log_12.txt  log_13.txt  log_14.txt  log_15.txt  main.cpp  stats.txt
implementation/examples/GAonemax/VS/.svn/: entries
presentation/: Zavrsni[2020]Okanovic_Patrik.pptx
tex/: literatura.bib  zavrsni.tex
(+9 files in other folders)
